# Crypto-qt5-app

./: CMakeLists.txt  README.md  config.json  data.hmac
src/: mainwindow.cpp  mainwindow.h
